tests/errors/substructural/composition/struct_move_with_non_move_field.sim

            struct Inner { r: &out i64 }
            struct Outer: Move { i: Inner }
            